src/snapshots/tui_term__widget__tests__vttest_11_06_05.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                 *********************************************                  ",
        "                 * The screen background should be black,    *                  ",
        "                 * with a box made of asterisks and this     *                  ",
        "                 * caption, in white (actually gray - it     *                  ",
        "                 * is not bold).  Only the asterisk box      *                  ",
        "                 * should be in color.                       *                  ",
        "                 *                                           *                  ",
        "                 *                                           *                  ",
        "                 *                                           *                  ",
        "                 *                                           *                  ",
        "                 *********************************************                  ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "Push <RETURN>                                                                   ",
        "█                                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 6, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 7, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 7, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 78, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 8, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 8, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 77, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 9, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 9, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 76, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 10, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 10, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 10, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 75, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 11, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 11, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 11, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 74, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 12, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 12, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 12, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 73, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 13, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 13, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 13, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 72, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 14, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 14, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 14, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 14, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 71, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 15, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 18, y: 15, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 61, y: 15, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 15, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 17, y: 16, fg: Indexed(3), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 62, y: 16, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 69, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Gray, bg: Indexed(0), underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Indexed(7), bg: Indexed(0), underline: Reset, modifier: NONE,
    ]
}
