src/snapshots/tui_term__widget__tests__vttest_11_07_02.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "Test Protected-Areas (SPA)                                                      ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************                     ",
        "                   ****************************************█                    ",
        "                                                                                ",
        "There should be an solid box made of *'s in the middle of the screen.           ",
        "note: DEC terminals do not implement ERM (erase mode).                          ",
        "Push <RETURN>                                                                   ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
